--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.3.6"
+version = "2.3.7"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -9,8 +9,6 @@ authors = [
 dependencies = [
     "anthropic>=0.50.0",
     "bcrypt>=4.2.0",
-    "azure-ai-documentintelligence>=1.0.1",
-    "azure-identity>=1.21.0",
     "bs4>=0.0.2",
     "fastapi>=0.115.11",
     "google-genai>=1.30.0",
@@ -31,7 +29,7 @@ dependencies = [
     "pydantic>=2.10.6",
     "pyjwt>=2.10.1",
     "pymupdf>=1.25.5",
-    "pypdf>=6.6.2",
+    "pypdf>=6.7.1",
     "python-dotenv>=1.0.1",
     "python-multipart>=0.0.22",
     "qdrant-client>=1.13.3",
@@ -51,7 +49,6 @@ dependencies = [
     "xai-sdk>=1.5.0",
     "openrouter>=0.1.3",
     "urllib3>=2.6.3",
-    "azure-core>=1.38.0",
     "mcp>=1.23.0",
     "aiohttp>=3.13.3",
     "brotli>=1.2.0",
@@ -64,6 +61,7 @@ dependencies = [
     "langchain-text-splitters>=1.0.0",
     "cryptography>=46.0.5",
     "langsmith>=0.6.3",
+    "crawl4ai>=0.8.0",
 ]
 requires-python = ">=3.12"
 
