--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "Peng-Agent"
-version = "2.3.7"
+version = "2.4.0"
 description = "A LLM ongoing chat agent for learning"
 authors = [
     { name = "Noah Ding", email = "noah@dingyipeng.com" },
@@ -34,6 +34,7 @@ dependencies = [
     "mcp>=1.26.0",
     "mysql-connector-python>=9.6.0",
     "nest-asyncio>=1.6.0",
+    "nltk>=3.9.3",
     "numpy>=2.4.2",
     "openai>=2.21.0",
     "openinference-instrumentation-langchain>=0.1.59",
